erDiagram
  %% Core entities surfaced in UI/API.
  ARTISTS {
    TEXT slug PK
    TEXT name
    TEXT description
  }

  PROJECTS {
    TEXT slug PK
    TEXT name
    TEXT description
    TEXT type
    TEXT release_date
    TEXT remaster_date
  }

  TRACKS {
    TEXT slug PK
    TEXT name
  }

  TAGS {
    TEXT slug PK
    TEXT name
  }

  %% Core relationship tables.
  PROJECT_ARTISTS {
    TEXT project_slug PK, FK
    TEXT artist_slug PK, FK
  }

  PROJECT_TRACKS {
    TEXT project_slug PK, FK
    TEXT track_slug PK, FK
    INTEGER position
  }

  TRACK_ARTISTS {
    TEXT track_slug PK, FK
    TEXT artist_slug PK, FK
  }

  TRACK_TAGS {
    TEXT track_slug PK, FK
    TEXT tag_slug PK, FK
  }

  %% Track media metadata.
  AUDIO {
    TEXT id PK
    TEXT track_slug FK
    TEXT name
    TEXT type
    TEXT date
    TEXT date_descriptor
    TEXT object_key
    TEXT original_filename
    TEXT content_type
    TEXT created_at
    TEXT updated_at
  }

  %% Supplemental metadata tables present in schema.
  IMAGES {
    TEXT slug PK
    TEXT path UNIQUE
  }

  EXTERNAL_LINKS {
    INTEGER id PK
    TEXT platform
    TEXT url UNIQUE
  }

  ARTIST_IMAGES {
    TEXT artist_slug PK, FK
    TEXT image_slug PK, FK
  }

  ARTIST_EXTERNAL_LINKS {
    TEXT artist_slug PK, FK
    INTEGER external_link_id PK, FK
  }

  PROJECT_IMAGES {
    TEXT project_slug PK, FK
    TEXT image_slug PK, FK
  }

  PROJECT_EXTERNAL_LINKS {
    TEXT project_slug PK, FK
    INTEGER external_link_id PK, FK
  }

  TRACK_EXTERNAL_LINKS {
    TEXT track_slug PK, FK
    INTEGER external_link_id PK, FK
  }

  TRACK_IMAGES {
    TEXT track_slug PK, FK
    TEXT image_slug PK, FK
  }

  PROJECTS ||--o{ PROJECT_ARTISTS : links
  ARTISTS ||--o{ PROJECT_ARTISTS : links
  PROJECTS ||--o{ PROJECT_TRACKS : links
  TRACKS ||--o{ PROJECT_TRACKS : links
  TRACKS ||--o{ TRACK_ARTISTS : links
  ARTISTS ||--o{ TRACK_ARTISTS : links
  TRACKS ||--o{ TRACK_TAGS : links
  TAGS ||--o{ TRACK_TAGS : links
  TRACKS ||--o{ AUDIO : has
  ARTISTS ||--o{ ARTIST_IMAGES : links
  IMAGES ||--o{ ARTIST_IMAGES : linked_to
  ARTISTS ||--o{ ARTIST_EXTERNAL_LINKS : links
  EXTERNAL_LINKS ||--o{ ARTIST_EXTERNAL_LINKS : linked_to
  PROJECTS ||--o{ PROJECT_IMAGES : links
  IMAGES ||--o{ PROJECT_IMAGES : linked_to
  PROJECTS ||--o{ PROJECT_EXTERNAL_LINKS : links
  EXTERNAL_LINKS ||--o{ PROJECT_EXTERNAL_LINKS : linked_to
  TRACKS ||--o{ TRACK_EXTERNAL_LINKS : links
  EXTERNAL_LINKS ||--o{ TRACK_EXTERNAL_LINKS : linked_to
  TRACKS ||--o{ TRACK_IMAGES : links
  IMAGES ||--o{ TRACK_IMAGES : linked_to
